// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<p
  className={null}
>
  Hello message component
</p>
`;

exports[`renders the Message component with optional props 1`] = `
<p
  className="message-class"
>
  Hello message component
</p>
`;
